[package]
name = "bevy_mod_speedup"
description = "bevy_mod_speedup is a collection of ways to increase the performance of your application."
categories = ["game-development"]
keywords = ["bevy", "gamedev"]
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Frederik Terstappen <freterstappen@gmail.com>"]
repository = "https://github.com/FrTerstappen/bevy_mod_speedup"
homepage = "https://github.com/FrTerstappen/bevy_mod_speedup"
documentation = "https://docs.rs/bevy_mod_speedup"
readme = "README.md"
edition = "2021"
rust-version = "1.76.0"
exclude = []

[features]
default = ["full_speed"]
full_speed = ["power", "priority", "request_fast_gpu"]
exclusive_fullscreen = [
    "dep:windows",
    "windows?/Win32_UI_HiDpi",
    "windows?/Win32_Foundation",
]
power = ["dep:windows", "windows?/Win32_System_Threading"]
priority = [
    "dep:windows",
    "windows?/Win32_Foundation",
    "windows?/Win32_System_Power",
    "windows?/Win32_System_Registry",
    "windows?/Win32_System_SystemServices",
    "dep:nix",
    "nix?/process",
    "nix?/pthread",
    "nix?/sched",
    "nix?/ucontext",
    "nix?/user",
]
request_fast_gpu = []
unattended = []
egui = ["dep:egui"]

[dependencies]
bevy = { version = "0.13.2", default-features = false }
egui = { version = "0.27.2", default-features = false, optional = true }

[target.'cfg(target_os = "android")'.dependencies]

[target.'cfg(target_os = "ios")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(any(target_os = "android", target_os = "ios", target_os = "linux", target_os = "macos"))'.dependencies]
nix = { version = "0.28.0", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56.0", optional = true }

[dev-dependencies]
bevy = { version = "0.13.2", default-features = true }
bevy_egui = { version = "0.27.0", default-features = false, features = [
    "default_fonts",
    "render",
] }

[[example]]
name = "egui"
path = "examples/egui.rs"
required-features = ["egui"]

[lints]
# Rust
[workspace.lints.rust]
unsafe_code = "deny"
unused = "deny"
nonstandard_style = "deny"
future_incompatible = "deny"
deprecated-in-future = "deny"
unused-crate-dependencies = "warn"
unused-qualifications = "warn"
missing_debug_implementations = "deny"

rust_2018_idioms = "warn"
rust_2018_compatibility = "deny"
rust_2021_compatibility = "deny"
rust-2024-compatibility = "deny"
